<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nature_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView

            android:layout_marginTop="350dp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greetStart"
            style="@style/mainText"
            android:text="@string/greettingStart"
            android:layout_gravity="center"

            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greetEnd"
            style="@style/secondaryText"
            android:text="@string/greettingEnd"
            android:layout_gravity="center"

            />

        <Button
            android:id="@+id/loginBtn"
            style="@style/mainBtn"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_shape"
            android:text="@string/toLoginBtn"


            />
        <TextView
            android:id="@+id/toRegistrationMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/registerText"
            android:layout_marginEnd="50dp"
            style="@style/secondaryText"
            android:layout_marginTop="15dp"

            />
        <ImageView

            android:id="@+id/icon"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>