<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="35dp"
            android:src="@drawable/logo"
            >
        </ImageView>

        <TextView
            android:id="@+id/signInText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:text="@string/SignIn" />

        <EditText
            android:id="@+id/signInEmail"
            style="@style/secondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:background="@color/background"
            android:drawableBottom="@drawable/white_line"
            android:drawablePadding="10dp"
            android:hint="@string/hintEmail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signInPassword"
            style="@style/secondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:background="@color/background"
            android:drawableBottom="@drawable/white_line"
            android:drawablePadding="10dp"
            android:hint="@string/hintPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:text="@string/SignIn"
            style="@style/mainText"
            android:background="@drawable/btn_shape"
            />
        <TextView
            android:id="@+id/toRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/registerText"
            android:paddingLeft="20dp"
            android:layout_marginStart="35dp"
            style="@style/secondaryText"
            android:layout_marginTop="30dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottom_pic"
            android:scaleType="fitXY"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>